@@ -18,8 +18,16 @@ java -Djava.security.manager -classpath game-of-thrones\target\game-of-thrones-1
 
 # Run with Java's default Security Manager and our own policy file
 
+Combining default policy with our own policy (using equals sign):
+
 ```
 java -Djava.security.manager -Djava.security.policy=gameofthrones.policy -classpath game-of-thrones\target\game-of-thrones-1.0.0-SNAPSHOT.jar;iron-throne\target\iron-throne-1.0.0-SNAPSHOT.jar ie.version1.bootcamp.securitymanager.gameofthrones.GameOfThrones claim Cersei
+```
+
+Replacing default policy with our own policy (using double equals sign):
+
+```
+java -Djava.security.manager -Djava.security.policy==gameofthrones.policy -classpath game-of-thrones\target\game-of-thrones-1.0.0-SNAPSHOT.jar;iron-throne\target\iron-throne-1.0.0-SNAPSHOT.jar ie.version1.bootcamp.securitymanager.gameofthrones.GameOfThrones claim Cersei
 ```
 
 # Create a keystore
